<resources>
    <string name="app_name">Data Driven Mechanic</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="version_number">Version v1.8</string>
    <string name="username_empty">Username field cannot be empty</string>
    <string name="password_empty">Password field cannot be empty</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>


    <string name="app_info">To start recording, press the \'Record\' button. To stop recording, press \'Stop.\'</string>
    <string name="choose_format_title">Choose audio format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="user_type_msg">Please select either expert or regular user</string>
    <string name="expert_user">Expert User</string>
    <string name="normal_user">Normal User</string>
    <string name="is_system_faulty">Engine misfiring?</string>
    <string name="change_user_type">Change user type</string>
    <string name="privacy_policy_statement"><![CDATA[<p>CarKnow LLC (doing business as DataDriven) built the Data Driven Mechanic app as a free application to help us develop and demonstrate future applications, algorithms, and services. This SERVICE is provided by CarKnow LLC d.b.a DataDriven at no cost and is intended for use as is, with no warranties expressed or implied.
<br/>This page is used to inform website visitors and mobile application users regarding our policies with the collection, use, and disclosure of Personal Information arising from the use of our service(s).
<br/>If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone outside our own company, except as described in this Privacy Policy.

<br/><br/><br/><b>Information Collection and Use</b>

<br/><br/>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to name, address, username, vehicle identification number, make, model, and color, current position, audio data, motion data, and location histories.
The information that we request is retained on your device until transmission to our servers, at which point it is kept and used as described within this privacy policy.
Note that this app may make use third party services that may collect information used to identify you.

<br/><br/><br/><b>Data Logging</b>

<br/><br/>Whenever you use this Service, we log information from your mobile device that is logged to our servers for diagnostic purposes. Additionally, in the case of an error, we collect information on your phone to trace potential causes of faults. This "Log Data"  may include information such as your devices’s Internet Protocol (“IP”) address, device name, operating system version, configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

<br/><br/><br/><b>Cookies</b>

<br/><br/>Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your devices’s internal memory.
This Services does not uses these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies, and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

<br/><br/><br/><b>Service Providers</b>

<br/><br/>We may employ third-party companies and individuals for the following reasons:
* To facilitate our Service\'s development and operation;
* To provide the Service on our behalf;
* To perform Service-related services; or
* To assist us in analyzing how our Service is used.
We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

<br/><br/><br/><b>Security</b>

<br/><br/>We  value your trust in providing us your Personal Information, thus we strive to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee your data\'s absolute security.

<br/><br/><br/><b>Links to Other Sites</b>

<br/><br/>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

<br/><br/><br/><b>Children’s Privacy</b>

<br/><br/>This Service does not address anyone under the age of 13. We do not knowingly collect personal identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this information from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us to ensure this information is removed.

<br/><br/><br/><b>Restrictions</b>
<br/><br/>Application users agree not to attempt to reverse engineer the mobile application, the processing server software, or any other related element of the data collection and analysis system.

<br/><br/><br/><b>Changes to This Privacy Policy</b>

<br/><br/>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. we will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

<br/><br/><br/><b>Contact Us</b>

<br/><br/>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at info@datadrivenapp.com or info@carknow.me.</p>]]></string>

</resources>

