<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100">

    <include
        layout="@layout/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <!--  <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="100dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/logo_kotak_bank_607420" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="33"
       android:layout_marginTop="20dp"
        android:background="@drawable/logo_login" />


    <TextView
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="Mechanic"
        android:textColor="@color/extra_text_color"
        android:textSize="45dp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_action_account_box" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginRight="40dp"
                android:hint="@string/hint_username"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/passwordImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_action_action_lock" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/showPasswordImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_visibility_on" />

    </LinearLayout>


    <!--    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberMeCheckBox"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>-->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_pressed_states"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white" />


    </RelativeLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/grey"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40" />

        <com.android.prasadmukne.datadrivenmechanic.utils.AVLoadingIndicatorView
            android:id="@+id/loginProgressBar"
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            app:indicatorColor="@color/colorPrimary"
            app:indicatorName="BallClipRotateMultipleIndicator" />

        <TextView
            android:id="@+id/versionNumberTextView"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:gravity="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- <LinearLayout
         android:id="@+id/fingerprintConfigureLinearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">



         <View
             android:layout_width="0dp"
             android:layout_weight="30"
             android:layout_marginBottom="30dp"
             android:layout_height="50dp"/>

         &lt;!&ndash; <Button
              android:id="@+id/fingerprintButton"
              android:background="@drawable/ot_greenbtn"
              android:layout_width="180dp"
              android:layout_gravity="center"
              android:layout_height="50dp"
              android:layout_below="@+id/mpinverify_content"
              android:layout_centerHorizontal="true"
              android:visibility="visible"
              />
      &ndash;&gt;
         <LinearLayout
             android:id="@+id/fingerprintButton"
             android:layout_width="wrap_content"
             android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:background="@drawable/fingerprint_button">
             <ImageView
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/fingerprint_white"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="18dp"
                 android:layout_marginRight="20dp"
                 android:text="@string/configure_fingerprint_button"/>
         </LinearLayout>
         <View
             android:layout_width="0dp"
             android:layout_weight="30"
             android:layout_height="50dp"/>

     </LinearLayout>-->
</LinearLayout>
